[package]
name = "naws"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = {version = "0.12.22", features = ["json"]}
quick-xml = {version= "0.38.0", features = ["encoding", "serialize"]}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = { version = "1.0.142", features = ["default"] }
serde-aux = "4.7.0"
tokio = {version = "1.46.1", features = ["full"]}
anyhow = "1.0.98"
clap = {version = "4.5.41", features = ["derive"]}
colored = "3.0.0"
chrono = {version = "0.4.41", features = ["serde"]}